# github-rag-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  ingest.py  ingest_from_directory.py  ingest_from_github.py  log.py  main.py  pyproject.toml  query.py  systemPrompt.txt  test.py  test_chunks.json
